--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <!-- Commentaire depuis mon nouveau Pc -->
+    </main>
     <footer></footer>
   </body>
 </html>
