Création du header, importation des premières icônes et images

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <title>Ohmyfood</title>
   </head>
   <body>
-    <header></header>
+    <header class="index-head">
+      <img class="index-head__logo" src="assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+<div class="index-head__location">
+  <i class="fa-solid fa-location-dot"></i>
+  <p class="index-head__locationtext">
+    Paris, Belleville
+  </p>
+</div>
+    </header>
     <main>
       <!-- Commentaire depuis mon nouveau Pc -->
     </main>
     <footer></footer>
+    <script src="https://kit.fontawesome.com/4fd6ec5615.js" crossorigin="anonymous"></script>
   </body>
 </html>
