Création d'une branche release pour faire fusionner les différentes sections du code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <main>
       <!-- Commentaire depuis mon nouveau Pc -->
+      <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/4fd6ec5615.js" crossorigin="anonymous"></script>
