Création des titres

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <main>
       <!-- Commentaire depuis mon nouveau Pc -->
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
+      <section class="discover-restorants">
+        <h1 class="discover-restorants__maintitle">Réservez le menu qui vous convient</h1>
+        <h2 class="discover-restorants__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</h2>
+      </section>
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/4fd6ec5615.js" crossorigin="anonymous"></script>
