--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <section class="discover-restorants">
         <h1 class="discover-restorants__maintitle">Réservez le menu qui vous convient</h1>
         <h2 class="discover-restorants__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</h2>
+        <button class="discover-restorants__searchbutton">Explorer nos restaurants</button>
       </section>
     </main>
     <footer></footer>
