--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
     </header>
     <main>
-      <!-- Commentaire depuis mon nouveau Pc -->
+      <!-- Commentaire depuis mon Pc nomade -->
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
       <section class="discover-restorants">
         <h1 class="discover-restorants__maintitle">Réservez le menu qui vous convient</h1>
