--- a/index.html
+++ b/index.html
@@ -9,24 +9,35 @@
   </head>
   <body>
     <header class="index-head">
-      <img class="index-head__logo" src="assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
-<div class="index-head__location">
-  <i class="fa-solid fa-location-dot"></i>
-  <p class="index-head__locationtext">
-    Paris, Belleville
-  </p>
-</div>
+      <img
+        class="index-head__logo"
+        src="assets/images/logo/ohmyfood.png"
+        alt="Logo Ohmyfood"
+      />
+      <div class="index-head__location">
+        <i class="fa-solid fa-location-dot"></i>
+        <p class="index-head__locationtext">Paris, Belleville</p>
+      </div>
     </header>
     <main>
       <!-- Commentaire depuis mon Pc nomade -->
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
       <section class="discover-restorants">
-        <h1 class="discover-restorants__maintitle">Réservez le menu qui vous convient</h1>
-        <h2 class="discover-restorants__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</h2>
-        <button class="discover-restorants__searchbutton">Explorer nos restaurants</button>
+        <h1 class="discover-restorants__maintitle">
+          Réservez le menu qui vous convient
+        </h1>
+        <h2 class="discover-restorants__subtitle">
+          Découvrez des restaurants d'exception, sélectionnés par nos soins.
+        </h2>
+        <button class="discover-restorants__searchbutton">
+          Explorer nos restaurants
+        </button>
       </section>
     </main>
     <footer></footer>
-    <script src="https://kit.fontawesome.com/4fd6ec5615.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/4fd6ec5615.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
