Création de la section 2 et importation des icônes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
           Explorer nos restaurants
         </button>
       </section>
+      <section class="how-to-use">
+        <h1 class="how-to-use__title">Fonctionnement</h1>
+        <div class="how-to-use__chooseyourrestorant">
+          <p class="how-to-use__one"><i class="fa-solid fa-1"></i></p>
+          <p class="how-to-use__mobile">
+            <i class="fa-solid fa-mobile-button"></i>
+          </p>
+          <p class="how-to-use__restoranttext">Choississez un restaurant</p>
+        </div>
+        <div class="how-to-use__chooseyourmenu">
+          <p class="how-to-use__two"><i class="fa-solid fa-2"></i></p>
+          <p class="how-to-use__listicon"><i class="fa-solid fa-list"></i></p>
+          <p class="how-to-use__menutext">Composez votre menu</p>
+        </div>
+        <div class="how-to-use__enjoyyourmeal">
+          <p class="how-to-use__three"><i class="fa-solid fa-3"></i></p>
+          <p class="how-to-use__store"><i class="fa-solid fa-store"></i></p>
+          <p class="how-to-use__enjoytext">Dégustez au restaurant</p>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script
