Création de la première carte restaurant et importation des polices pour les textes

--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
           <p class="how-to-use__enjoytext">Dégustez au restaurant</p>
         </div>
       </section>
+      <section class="restorants-prev">
+        <h1 class="restorants-prev__title">Restaurants</h1>
+        <div class="restorants-prev__card1">
+          <a href="#" class="restorants-prev__card1link">
+            <p class="restorants-prev__card1--new">Nouveau</p>
+            <img
+              src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              alt="La palette du goût"
+              class="restorants-prev__card1__pic"
+            />
+            <div class="restorants-prev__card1__description">
+              <h1 class="restorants-prev__description__title">
+                La palette du goût
+              </h1>
+              <h2 class="restorants-prev__description__subtitle">
+                Ménilmontant
+              </h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script
