--- a/index.html
+++ b/index.html
@@ -76,6 +76,25 @@
             </div>
           </a>
         </div>
+        <div class="restorants-prev__card2">
+          <a href="#" class="restorants-prev__card2link">
+            <p class="restorants-prev__card2--new">Nouveau</p>
+            <img
+              src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              alt="La note enchantée"
+              class="restorants-prev__card2__pic"
+            />
+            <div class="restorants-prev__card2__description">
+              <h1 class="restorants-prev__description__title2">
+                La note enchantée
+              </h1>
+              <h2 class="restorants-prev__description__subtitle2">Charonne</h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
       </section>
     </main>
     <footer></footer>
