Création de la troisième carte restaurant

--- a/index.html
+++ b/index.html
@@ -95,6 +95,26 @@
             </div>
           </a>
         </div>
+        <div class="restorants-prev__card3">
+          <a href="#" class="restorants-prev__card3link">
+            <img
+              src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              alt="Á la française"
+              class="restorants-prev__card3__pic"
+            />
+            <div class="restorants-prev__card3__description">
+              <h1 class="restorants-prev__description__title3">
+                Á la française
+              </h1>
+              <h2 class="restorants-prev__description__subtitle3">
+                Cité Rouge
+              </h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
       </section>
     </main>
     <footer></footer>
