--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
             </div>
           </a>
         </div>
+        <div class="restorants-prev__card4">
+          <a href="#" class="restorants-prev__card4link">
+            <img
+              src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              alt="Le délice des sens"
+              class="restorants-prev__card4__pic"
+            />
+            <div class="restorants-prev__card4__description">
+              <h1 class="restorants-prev__description__title4">
+                Le délice des sens
+              </h1>
+              <h2 class="restorants-prev__description__subtitle4">
+                Folie-Méricourt
+              </h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
       </section>
     </main>
     <footer></footer>
