Ajout de commentaires

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           <p class="how-to-use__enjoytext">Dégustez au restaurant</p>
         </div>
       </section>
+
+      <!-- Début de la 1ère carte restaurant -->
       <section class="restorants-prev">
         <h1 class="restorants-prev__title">Restaurants</h1>
         <div class="restorants-prev__card1">
@@ -76,6 +78,9 @@
             </div>
           </a>
         </div>
+        <!-- Fin de la 1ère carte restaurant -->
+
+        <!-- Début de la seconde carte restaurant -->
         <div class="restorants-prev__card2">
           <a href="#" class="restorants-prev__card2link">
             <p class="restorants-prev__card2--new">Nouveau</p>
@@ -95,6 +100,8 @@
             </div>
           </a>
         </div>
+        <!-- Fin de la seconde carte restaurant -->
+        <!-- Début de la troisième carte restaurant -->
         <div class="restorants-prev__card3">
           <a href="#" class="restorants-prev__card3link">
             <img
@@ -115,6 +122,8 @@
             </div>
           </a>
         </div>
+        <!-- Fin de la troisième carte restaurants -->
+        <!-- Début de la quatrième carte restaurant -->
         <div class="restorants-prev__card4">
           <a href="#" class="restorants-prev__card4link">
             <img
@@ -135,6 +144,7 @@
             </div>
           </a>
         </div>
+        <!-- Fin de la quatrième carte restaurant -->
       </section>
     </main>
     <footer></footer>
