--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       </section>
       <section class="how-to-use">
         <h1 class="how-to-use__title">Fonctionnement</h1>
+        <!-- Premier lien -->
         <div class="how-to-use__chooseyourrestorant">
           <p class="how-to-use__one"><i class="fa-solid fa-1"></i></p>
           <p class="how-to-use__mobile">
@@ -42,16 +43,22 @@
           </p>
           <p class="how-to-use__restoranttext">Choississez un restaurant</p>
         </div>
+        <!-- fin du premier lien -->
+
+        <!-- Second lien -->
         <div class="how-to-use__chooseyourmenu">
           <p class="how-to-use__two"><i class="fa-solid fa-2"></i></p>
           <p class="how-to-use__listicon"><i class="fa-solid fa-list"></i></p>
           <p class="how-to-use__menutext">Composez votre menu</p>
         </div>
+        <!-- Fin du second lien -->
+        <!-- Troisième lien -->
         <div class="how-to-use__enjoyyourmeal">
           <p class="how-to-use__three"><i class="fa-solid fa-3"></i></p>
           <p class="how-to-use__store"><i class="fa-solid fa-store"></i></p>
           <p class="how-to-use__enjoytext">Dégustez au restaurant</p>
         </div>
+        <!-- Fin du troisième lien -->
       </section>
     </main>
     <footer></footer>
