Création du header pour les pages restaurants

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -8,8 +8,17 @@
     <title>Á la française</title>
   </head>
   <body>
-      <header></header>
-      <main></main>
-      <footer></footer>
+    <header class="page-head">
+      <a class="page-head_returnlink" href="../index.html"
+        ><i class="fa-solid fa-left-long"></i
+      ></a>
+      <img
+        src="../assets/images/logo/ohmyfood.png"
+        alt="Logo Ohmyfood"
+        class="page-head_logo"
+      />
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
