Ajout de la photo du restaurant et des titres

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -18,7 +18,20 @@
         class="page-head_logo"
       />
     </header>
-    <main></main>
+    <main>
+      <!-- Simple image ou background? -->
+      <img
+        src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="Photo du restaurant Á la française"
+        class="picture"
+      />
+      <section class="menu">
+        <div class="menu_maintitle">
+          <h1 class="maintitle_title">Á la française</h1>
+          <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
