Création des menus et modification des classes des balises

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -30,6 +30,21 @@
           <h1 class="maintitle_title">Á la française</h1>
           <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
         </div>
+        <h1 class="starter_title">Entrées</h1>
+        <div class="starter">
+          <div class="starter_dish">
+            <p class="starter_dish1_text">Tartare de poulpe acidulé</p>
+            <p class="starter_dish1_text">Aux zestes d'orange</p>
+            <p class="starter_dish1_price">25€</p>
+          </div>
+        </div>
+        <div class="starter">
+          <div class="starter_dish">
+            <p class="starter_dish1_text">Velouté de légumes d'antan</p>
+            <p class="starter_dish1_text">Carotte, panais, topinambour</p>
+            <p class="starter_dish1_price">35€</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
