Modification des classes des balises et ajout de l'icône de validation

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -33,16 +33,32 @@
         <h1 class="starter_title">Entrées</h1>
         <div class="starter">
           <div class="starter_dish">
-            <p class="starter_dish1_text">Tartare de poulpe acidulé</p>
-            <p class="starter_dish1_text">Aux zestes d'orange</p>
-            <p class="starter_dish1_price">25€</p>
+            <p class="starter_dish_text">Tartare de poulpe acidulé</p>
+            <p class="starter_dish_text2">Aux zestes d'orange</p>
+            <p class="starter_dish_price">25€</p>
+            <p class="starter_dish_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </div>
         </div>
         <div class="starter">
           <div class="starter_dish">
-            <p class="starter_dish1_text">Velouté de légumes d'antan</p>
-            <p class="starter_dish1_text">Carotte, panais, topinambour</p>
-            <p class="starter_dish1_price">35€</p>
+            <p class="starter_dish_text">Velouté de légumes d'antan</p>
+            <p class="starter_dish_text2">Carotte, panais, topinambour</p>
+            <p class="starter_dish_price">35€</p>
+            <p class="starter_dish_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
+          </div>
+        </div>
+        <div class="starter">
+          <div class="starter_dish">
+            <p class="starter_dish_text">Soupe à l'oignon</p>
+            <p class="starter_dish_text2">Revisitée</p>
+            <p class="starter_dish_price">20€</p>
+            <p class="starter_dish_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </div>
         </div>
       </section>
