--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -30,35 +30,52 @@
           <h1 class="maintitle_title">Á la française</h1>
           <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
         </div>
-        <h1 class="starter_title">Entrées</h1>
+        <!-- Début du menu pour les Entrées -->
         <div class="starter">
+          <h1 class="starter_title">Entrées</h1>
           <div class="starter_dish">
-            <p class="starter_dish_text">Tartare de poulpe acidulé</p>
-            <p class="starter_dish_text2">Aux zestes d'orange</p>
-            <p class="starter_dish_price">25€</p>
-            <p class="starter_dish_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <a class="starter_link" href="#">
+              <p class="starter_dish_text">Tartare de poulpe acidulé</p>
+              <p class="starter_dish_text2">Aux zestes d'orange</p>
+              <p class="starter_dish_price">25€</p>
+              <p class="starter_dish_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </a>
+          </div>
+          <!-- Ajout de divs inutiles -->
+          <div class="starter_dish">
+            <a class="starter_link" href="#">
+              <p class="starter_dish_text">Velouté de légumes d'antan</p>
+              <p class="starter_dish_text2">Carotte, panais, topinambour</p>
+              <p class="starter_dish_price">35€</p>
+              <p class="starter_dish_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </a>
+          </div>
+          <!-- attention -->
+          <div class="starter_dish">
+            <a class="starter_link" href="#">
+              <p class="starter_dish_text">Soupe à l'oignon</p>
+              <p class="starter_dish_text2">Revisitée</p>
+              <p class="starter_dish_price">20€</p>
+              <p class="starter_dish_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </a>
           </div>
         </div>
-        <div class="starter">
-          <div class="starter_dish">
-            <p class="starter_dish_text">Velouté de légumes d'antan</p>
-            <p class="starter_dish_text2">Carotte, panais, topinambour</p>
-            <p class="starter_dish_price">35€</p>
-            <p class="starter_dish_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
-          </div>
-        </div>
-        <div class="starter">
-          <div class="starter_dish">
-            <p class="starter_dish_text">Soupe à l'oignon</p>
-            <p class="starter_dish_text2">Revisitée</p>
-            <p class="starter_dish_price">20€</p>
-            <p class="starter_dish_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+        <!-- Fin du menu pour les Entrées -->
+        <!-- Début du menu pour les plats -->
+        <div class="main">
+          <h1 class="maindish_title">Plats</h1>
+          <div class="main_maindish">
+            <a class="maindish_link" href="#">
+              <p class="maindish_text">Coquilles Saint-Jacques</p>
+              <p class="maindish_text">Accompagnées d'une purée de panais</p>
+              <p class="maindish_price">40€</p>
+            </a>
           </div>
         </div>
       </section>
