--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <header class="page-head">
-      <a class="page-head_returnlink" href="../index.html"
-        ><i class="fa-solid fa-left-long"></i
-      ></a>
+      <a class="page-head_returnlink" href="../index.html">
+        <i class="fa-solid fa-left-long"></i>
+        <p class="returnlink_return">Retour</p>
+        </a>
       <img
         src="../assets/images/logo/ohmyfood.png"
         alt="Logo Ohmyfood"
@@ -77,7 +78,15 @@
               <p class="maindish_price">40€</p>
             </a>
           </div>
+          <div class="main_maindish">
+            <a class="maindish_link" href="#">
+              <p class="maindish_text">Magret de canard</p>
+              <p class="maindish_text">Et parmentier de pommes de terres</p>
+              <p class="maindish_price">35€</p>
+            </a>
+          </div>
         </div>
+        
       </section>
     </main>
     <footer></footer>
