--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -85,6 +85,13 @@
               <p class="maindish_price">35€</p>
             </a>
           </div>
+          <div class="main_maindish">
+            <a class="maindish_link" href="#">
+              <p class="maindish_text">Pigeonneau d'Ille-et-Vilaine</p>
+              <p class="maindish_text">Sur son lit de gnocchis aux légumes</p>
+              <p class="maindish_price">44€</p>
+            </a>
+          </div>
         </div>
         
       </section>
