--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -85,6 +85,7 @@
               <p class="maindish_price">35€</p>
             </a>
           </div>
+          <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
           <div class="main_maindish">
             <a class="maindish_link" href="#">
               <p class="maindish_text">Pigeonneau d'Ille-et-Vilaine</p>
