--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -74,14 +74,14 @@
           <div class="main_maindish">
             <a class="maindish_link" href="#">
               <p class="maindish_text">Coquilles Saint-Jacques</p>
-              <p class="maindish_text">Accompagnées d'une purée de panais</p>
+              <p class="maindish_text2">Accompagnées d'une purée de panais</p>
               <p class="maindish_price">40€</p>
             </a>
           </div>
           <div class="main_maindish">
             <a class="maindish_link" href="#">
               <p class="maindish_text">Magret de canard</p>
-              <p class="maindish_text">Et parmentier de pommes de terres</p>
+              <p class="maindish_text2">Et parmentier de pommes de terres</p>
               <p class="maindish_price">35€</p>
             </a>
           </div>
@@ -89,12 +89,37 @@
           <div class="main_maindish">
             <a class="maindish_link" href="#">
               <p class="maindish_text">Pigeonneau d'Ille-et-Vilaine</p>
-              <p class="maindish_text">Sur son lit de gnocchis aux légumes</p>
+              <p class="maindish_text2">Sur son lit de gnocchis aux légumes</p>
               <p class="maindish_price">44€</p>
             </a>
           </div>
         </div>
-        
+        <!-- Fin du menu pour les plats -->
+        <!-- Début du menu pour les desserts -->
+        <div class="finish">
+          <h1 class="finish_title">Desserts</h1>
+          <div class="finish_desserts">
+            <a class="desserts_link" href="#">
+              <p class="desserts_text">Pétales de violettes glacés</p>
+              <p class="desserts_text2">Et purée de noisettes</p>
+              <p class="desserts_price">18€</p>
+            </a>
+          </div>
+          <div class="finish_desserts">
+            <a class="desserts_link" href="#">
+              <p class="desserts_text">Fondant au chocolat</p>
+              <p class="desserts_text2">Revisité</p>
+              <p class="desserts_price">22€</p>
+            </a>
+          </div>
+          <div class="finish_desserts">
+            <a class="desserts_link" href="#">
+              <p class="desserts_text">Millefeuille croustillant</p>
+              <p class="desserts_text2">Myrtilles et pâte d'amande</p>
+              <p class="desserts_price">23€</p>
+            </a>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
