--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -121,6 +121,9 @@
           </div>
         </div>
       </section>
+      <section class="order">
+        <button class="order_button">Commander</button>
+      </section>
     </main>
     <footer></footer>
   </body>
