--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <a href="#" class="link3__text">Mentions légales</a>
       </div>
       <div class="index-foot__link4">
-        <a href="#" class="link4__text">Contact</a>
+        <a href="mailto:ohmyfood@gmail.com" class="link4__text">Contact</a>
       </div>
     </footer>
     <script
