--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -125,6 +125,26 @@
         <button class="order_button">Commander</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <img
+        class="index-foot__logo"
+        src="assets/images/logo/ohmyfood.png"
+        alt="Logo Ohmyfood"
+      />
+      <div class="index-foot__link1">
+        <p class="link1__icon"><i class="fa-solid fa-utensils"></i></p>
+        <a href="#" class="link1__text">Proposer un restaurant</a>
+      </div>
+      <div class="index-foot__link2">
+        <p class="link2__icon"><i class="fa-solid fa-handshake-angle"></i></p>
+        <a href="#" class="link2__text">Devenir partenaire</a>
+      </div>
+      <div class="index-foot__link3">
+        <a href="#" class="link3__text">Mentions légales</a>
+      </div>
+      <div class="index-foot__link4">
+        <a href="mailto:ohmyfood@gmail.com" class="link4__text">Contact</a>
+      </div>
+    </footer>
   </body>
 </html>
