Correction d'une faute de conjugaison

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p class="how-to-use__mobile">
             <i class="fa-solid fa-mobile-button"></i>
           </p>
-          <p class="how-to-use__restoranttext">Choississez un restaurant</p>
+          <p class="how-to-use__restoranttext">Choisissez un restaurant</p>
         </div>
         <!-- fin du premier lien -->
 
