--- a/index.html
+++ b/index.html
@@ -36,29 +36,30 @@
       <section class="how-to-use">
         <h1 class="how-to-use__title">Fonctionnement</h1>
         <!-- Premier lien -->
-        <div class="how-to-use__chooseyourrestorant">
-          <p class="how-to-use__one"><i class="fa-solid fa-1"></i></p>
-          <p class="how-to-use__mobile">
+        <div class="how-to-use__setup">
+          <p class="how-to-use__number"><i class="fa-solid fa-1"></i></p>
+          <p class="how-to-use__icon">
             <i class="fa-solid fa-mobile-button"></i>
           </p>
-          <p class="how-to-use__restoranttext">Choisissez un restaurant</p>
+          <p class="how-to-use__text">Choisissez un restaurant</p>
         </div>
         <!-- fin du premier lien -->
 
         <!-- Second lien -->
-        <div class="how-to-use__chooseyourmenu">
-          <p class="how-to-use__two"><i class="fa-solid fa-2"></i></p>
-          <p class="how-to-use__listicon"><i class="fa-solid fa-list"></i></p>
-          <p class="how-to-use__menutext">Composez votre menu</p>
+        <div class="how-to-use__setup">
+          <p class="how-to-use__number"><i class="fa-solid fa-2"></i></p>
+          <p class="how-to-use__icon"><i class="fa-solid fa-list"></i></p>
+          <p class="how-to-use__text">Composez votre menu</p>
         </div>
         <!-- Fin du second lien -->
         <!-- Troisième lien -->
-        <div class="how-to-use__enjoyyourmeal">
-          <p class="how-to-use__three"><i class="fa-solid fa-3"></i></p>
-          <p class="how-to-use__store"><i class="fa-solid fa-store"></i></p>
-          <p class="how-to-use__enjoytext">Dégustez au restaurant</p>
+        <div class="how-to-use__setup">
+          <p class="how-to-use__number"><i class="fa-solid fa-3"></i></p>
+          <p class="how-to-use__icon"><i class="fa-solid fa-store"></i></p>
+          <p class="how-to-use__text">Dégustez au restaurant</p>
         </div>
         <!-- Fin du troisième lien -->
+        <!-- Mieux vaut attribuer les mêmes classes pour ne pas avoir de problèmes en CSS -->
       </section>
     </main>
     <footer></footer>
