--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <main>
       <!-- Commentaire depuis mon Pc nomade -->
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
+
+      <!-- Début de la section 1 -->
       <section class="discover-restorants">
         <h1 class="discover-restorants__maintitle">
           Réservez le menu qui vous convient
@@ -33,6 +35,7 @@
           Explorer nos restaurants
         </button>
       </section>
+      <!-- Fin de la section 1 -->
     </main>
     <footer></footer>
     <script
