--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           Explorer nos restaurants
         </button>
       </section>
+
+
+
+      <!-- Début de la section 2 -->
       <section class="how-to-use">
         <h1 class="how-to-use__title">Fonctionnement</h1>
         <!-- Premier lien -->
@@ -61,6 +65,7 @@
         <!-- Fin du troisième lien -->
         <!-- Mieux vaut attribuer les mêmes classes pour ne pas avoir de problèmes en CSS -->
       </section>
+      <!-- Fin de la section 2 -->
     </main>
     <footer></footer>
     <script
