--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
           Explorer nos restaurants
         </button>
       </section>
-
-
-
-      <!-- Début de la section 2 -->
       <section class="how-to-use">
         <h1 class="how-to-use__title">Fonctionnement</h1>
         <!-- Premier lien -->
@@ -63,11 +59,123 @@
           <p class="how-to-use__text">Dégustez au restaurant</p>
         </div>
         <!-- Fin du troisième lien -->
-        <!-- Mieux vaut attribuer les mêmes classes pour ne pas avoir de problèmes en CSS -->
+        <!-- Correction des erreurs de fusion et uniformisation des balises -->
       </section>
-      <!-- Fin de la section 2 -->
+
+      <!-- Début de la 1ère carte restaurant -->
+      <section class="restorants-prev">
+        <h1 class="restorants-prev__title">Restaurants</h1>
+        <div class="restorants-prev__card1">
+          <a href="#" class="restorants-prev__card1link">
+            <p class="restorants-prev__card1--new">Nouveau</p>
+            <img
+              src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              alt="La palette du goût"
+              class="restorants-prev__card1__pic"
+            />
+            <div class="restorants-prev__card1__description">
+              <h1 class="restorants-prev__description__title">
+                La palette du goût
+              </h1>
+              <h2 class="restorants-prev__description__subtitle">
+                Ménilmontant
+              </h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
+        <!-- Fin de la 1ère carte restaurant -->
+
+        <!-- Début de la seconde carte restaurant -->
+        <div class="restorants-prev__card2">
+          <a href="#" class="restorants-prev__card2link">
+            <p class="restorants-prev__card2--new">Nouveau</p>
+            <img
+              src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              alt="La note enchantée"
+              class="restorants-prev__card2__pic"
+            />
+            <div class="restorants-prev__card2__description">
+              <h1 class="restorants-prev__description__title2">
+                La note enchantée
+              </h1>
+              <h2 class="restorants-prev__description__subtitle2">Charonne</h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
+        <!-- Fin de la seconde carte restaurant -->
+        <!-- Début de la troisième carte restaurant -->
+        <div class="restorants-prev__card3">
+          <a href="#" class="restorants-prev__card3link">
+            <img
+              src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              alt="Á la française"
+              class="restorants-prev__card3__pic"
+            />
+            <div class="restorants-prev__card3__description">
+              <h1 class="restorants-prev__description__title3">
+                Á la française
+              </h1>
+              <h2 class="restorants-prev__description__subtitle3">
+                Cité Rouge
+              </h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
+        <!-- Fin de la troisième carte restaurants -->
+        <!-- Début de la quatrième carte restaurant -->
+        <div class="restorants-prev__card4">
+          <a href="#" class="restorants-prev__card4link">
+            <img
+              src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              alt="Le délice des sens"
+              class="restorants-prev__card4__pic"
+            />
+            <div class="restorants-prev__card4__description">
+              <h1 class="restorants-prev__description__title4">
+                Le délice des sens
+              </h1>
+              <h2 class="restorants-prev__description__subtitle4">
+                Folie-Méricourt
+              </h2>
+              <p class="restorants-prev__description__hearticon">
+                <i class="fa-regular fa-heart"></i>
+              </p>
+            </div>
+          </a>
+        </div>
+        <!-- Fin de la quatrième carte restaurant -->
+      </section>
     </main>
-    <footer></footer>
+    <footer class="index-foot">
+      <img
+        class="index-foot__logo"
+        src="assets/images/logo/ohmyfood.png"
+        alt="Logo Ohmyfood"
+      />
+      <div class="index-foot__link1">
+        <p class="link1__icon"><i class="fa-solid fa-utensils"></i></p>
+        <a href="#" class="link1__text">Proposer un restaurant</a>
+      </div>
+      <div class="index-foot__link2">
+        <p class="link2__icon"><i class="fa-solid fa-handshake-angle"></i></p>
+        <a href="#" class="link2__text">Devenir partenaire</a>
+      </div>
+      <div class="index-foot__link3">
+        <a href="#" class="link3__text">Mentions légales</a>
+      </div>
+      <div class="index-foot__link4">
+        <a href="mailto:ohmyfood@gmail.com" class="link4__text">Contact</a>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/4fd6ec5615.js"
       crossorigin="anonymous"
