--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -12,7 +12,7 @@
       <a class="page-head_returnlink" href="../index.html">
         <i class="fa-solid fa-left-long"></i>
         <p class="returnlink_return">Retour</p>
-        </a>
+      </a>
       <img
         src="../assets/images/logo/ohmyfood.png"
         alt="Logo Ohmyfood"
@@ -44,7 +44,7 @@
               </p>
             </a>
           </div>
-          <!-- Ajout de divs inutiles -->
+          <!-- Suppression de divs inutiles -->
           <div class="starter_dish">
             <a class="starter_link" href="#">
               <p class="starter_dish_text">Velouté de légumes d'antan</p>
