--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -128,7 +128,7 @@
     <footer>
       <img
         class="index-foot__logo"
-        src="assets/images/logo/ohmyfood.png"
+        src="../assets/images/logo/ohmyfood.png"
         alt="Logo Ohmyfood"
       />
       <div class="index-foot__link1">
