Modification des classes des balises de la section 1

--- a/index.html
+++ b/index.html
@@ -24,16 +24,12 @@
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
 
       <!-- Début de la section 1 -->
-      <section class="discover-restorants">
-        <h1 class="discover-restorants__maintitle">
-          Réservez le menu qui vous convient
-        </h1>
-        <h2 class="discover-restorants__subtitle">
+      <section class="section1">
+        <h1 class="section1__maintitle">Réservez le menu qui vous convient</h1>
+        <h2 class="section1__subtitle">
           Découvrez des restaurants d'exception, sélectionnés par nos soins.
         </h2>
-        <button class="discover-restorants__searchbutton">
-          Explorer nos restaurants
-        </button>
+        <button class="section1__searchbutton">Explorer nos restaurants</button>
       </section>
       <!-- Fin de la section 1 -->
 
