--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main>
       <!-- Commentaire depuis mon Pc nomade -->
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
+      <!-- Méthodologie BEM non respectée. Il est important de nommer les blocs, éléments et modificateurs selon leurs rôles -->
 
       <!-- Début de la section 1 -->
       <section class="section1">
