Modification des classes des balises de la section 2

--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
       <!-- Fin de la section 1 -->
 
       <!-- Début de la section 2 -->
-      <section class="how-to-use">
-        <h1 class="how-to-use__title">Fonctionnement</h1>
+      <section class="section2">
+        <h1 class="section2__maintitle">Fonctionnement</h1>
         <!-- Premier lien -->
-        <div class="how-to-use__setup">
-          <p class="how-to-use__number"><i class="fa-solid fa-1"></i></p>
-          <p class="how-to-use__icon">
+        <div class="section2__card">
+          <p class="section2__number"><i class="fa-solid fa-1"></i></p>
+          <p class="section2__icon">
             <i class="fa-solid fa-mobile-button"></i>
           </p>
-          <p class="how-to-use__text">Choisissez un restaurant</p>
+          <p class="section2__text">Choisissez un restaurant</p>
         </div>
         <!-- fin du premier lien -->
 
         <!-- Second lien -->
-        <div class="how-to-use__setup">
-          <p class="how-to-use__number"><i class="fa-solid fa-2"></i></p>
-          <p class="how-to-use__icon"><i class="fa-solid fa-list"></i></p>
-          <p class="how-to-use__text">Composez votre menu</p>
+        <div class="section2__card">
+          <p class="section2__number"><i class="fa-solid fa-2"></i></p>
+          <p class="section2__icon"><i class="fa-solid fa-list"></i></p>
+          <p class="section2__text">Composez votre menu</p>
         </div>
         <!-- Fin du second lien -->
         <!-- Troisième lien -->
-        <div class="how-to-use__setup">
-          <p class="how-to-use__number"><i class="fa-solid fa-3"></i></p>
-          <p class="how-to-use__icon"><i class="fa-solid fa-store"></i></p>
-          <p class="how-to-use__text">Dégustez au restaurant</p>
+        <div class="section2__card">
+          <p class="section2__number"><i class="fa-solid fa-3"></i></p>
+          <p class="section2__icon"><i class="fa-solid fa-store"></i></p>
+          <p class="section2__text">Dégustez au restaurant</p>
         </div>
         <!-- Fin du troisième lien -->
         <!-- Correction des erreurs de fusion et uniformisation des balises -->
