--- a/index.html
+++ b/index.html
@@ -68,23 +68,19 @@
       <!-- Début de la section 3 -->
       <!-- Début de la 1ère carte restaurant -->
       <section class="restorants-prev">
-        <h1 class="restorants-prev__title">Restaurants</h1>
-        <div class="restorants-prev__card1">
-          <a href="#" class="restorants-prev__card1link">
-            <p class="restorants-prev__card1--new">Nouveau</p>
+        <h1 class="restorants-prev__maintitle">Restaurants</h1>
+        <div class="restorants-prev__card">
+          <a href="#" class="restorants-prev__cardlink">
+            <p class="card--new">Nouveau</p>
             <img
               src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               alt="La palette du goût"
-              class="restorants-prev__card1__pic"
+              class="card__picture"
             />
-            <div class="restorants-prev__card1__description">
-              <h1 class="restorants-prev__description__title">
-                La palette du goût
-              </h1>
-              <h2 class="restorants-prev__description__subtitle">
-                Ménilmontant
-              </h2>
-              <p class="restorants-prev__description__hearticon">
+            <div class="card__description">
+              <h1 class="description__title">La palette du goût</h1>
+              <h2 class="description__subtitle">Ménilmontant</h2>
+              <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
               </p>
             </div>
@@ -94,19 +90,17 @@
 
         <!-- Début de la seconde carte restaurant -->
         <div class="restorants-prev__card2">
-          <a href="#" class="restorants-prev__card2link">
-            <p class="restorants-prev__card2--new">Nouveau</p>
+          <a href="#" class="restorants-prev__cardlink">
+            <p class="card--new">Nouveau</p>
             <img
               src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
               alt="La note enchantée"
-              class="restorants-prev__card2__pic"
+              class="card__picture"
             />
-            <div class="restorants-prev__card2__description">
-              <h1 class="restorants-prev__description__title2">
-                La note enchantée
-              </h1>
-              <h2 class="restorants-prev__description__subtitle2">Charonne</h2>
-              <p class="restorants-prev__description__hearticon">
+            <div class="card__description">
+              <h1 class="description__title">La note enchantée</h1>
+              <h2 class="description__subtitle">Charonne</h2>
+              <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
               </p>
             </div>
@@ -114,21 +108,17 @@
         </div>
         <!-- Fin de la seconde carte restaurant -->
         <!-- Début de la troisième carte restaurant -->
-        <div class="restorants-prev__card3">
-          <a href="#" class="restorants-prev__card3link">
+        <div class="restorants-prev__card">
+          <a href="#" class="restorants-prev__cardlink">
             <img
               src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               alt="Á la française"
-              class="restorants-prev__card3__pic"
+              class="card__picture"
             />
-            <div class="restorants-prev__card3__description">
-              <h1 class="restorants-prev__description__title3">
-                Á la française
-              </h1>
-              <h2 class="restorants-prev__description__subtitle3">
-                Cité Rouge
-              </h2>
-              <p class="restorants-prev__description__hearticon">
+            <div class="card__description">
+              <h1 class="description__title">Á la française</h1>
+              <h2 class="description__subtitle">Cité Rouge</h2>
+              <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
               </p>
             </div>
@@ -136,21 +126,17 @@
         </div>
         <!-- Fin de la troisième carte restaurants -->
         <!-- Début de la quatrième carte restaurant -->
-        <div class="restorants-prev__card4">
-          <a href="#" class="restorants-prev__card4link">
+        <div class="restorants-prev__card">
+          <a href="#" class="restorants-prev__cardlink">
             <img
               src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               alt="Le délice des sens"
-              class="restorants-prev__card4__pic"
+              class="card__picture"
             />
-            <div class="restorants-prev__card4__description">
-              <h1 class="restorants-prev__description__title4">
-                Le délice des sens
-              </h1>
-              <h2 class="restorants-prev__description__subtitle4">
-                Folie-Méricourt
-              </h2>
-              <p class="restorants-prev__description__hearticon">
+            <div class="card__description">
+              <h1 class="description__title">Le délice des sens</h1>
+              <h2 class="description__subtitle">Folie-Méricourt</h2>
+              <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
               </p>
             </div>
