Uniformisation des classes des balises du footer

--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
         src="assets/images/logo/ohmyfood.png"
         alt="Logo Ohmyfood"
       />
-      <div class="index-foot__link1">
-        <p class="link1__icon"><i class="fa-solid fa-utensils"></i></p>
-        <a href="#" class="link1__text">Proposer un restaurant</a>
+      <div class="index-foot__link">
+        <p class="link__icon"><i class="fa-solid fa-utensils"></i></p>
+        <a href="#" class="link__text">Proposer un restaurant</a>
       </div>
-      <div class="index-foot__link2">
-        <p class="link2__icon"><i class="fa-solid fa-handshake-angle"></i></p>
-        <a href="#" class="link2__text">Devenir partenaire</a>
+      <div class="index-foot__link">
+        <p class="link__icon"><i class="fa-solid fa-handshake-angle"></i></p>
+        <a href="#" class="link__text">Devenir partenaire</a>
       </div>
-      <div class="index-foot__link3">
-        <a href="#" class="link3__text">Mentions légales</a>
+      <div class="index-foot__link">
+        <a href="#" class="link__text">Mentions légales</a>
       </div>
-      <div class="index-foot__link4">
-        <a href="mailto:ohmyfood@gmail.com" class="link4__text">Contact</a>
+      <div class="index-foot__link">
+        <a href="mailto:ohmyfood@gmail.com" class="link__text">Contact</a>
       </div>
     </footer>
     <script
