Modification d'une classe oubliée

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- Fin de la 1ère carte restaurant -->
 
         <!-- Début de la seconde carte restaurant -->
-        <div class="restorants-prev__card2">
+        <div class="restorants-prev__card">
           <a href="#" class="restorants-prev__cardlink">
             <p class="card--new">Nouveau</p>
             <img
