--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -32,18 +32,19 @@
           <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
-        <div class="starter">
-          <h1 class="starter_title">Entrées</h1>
-          <div class="starter_dish">
-            <a class="starter_link" href="#">
-              <p class="starter_dish_text">Tartare de poulpe acidulé</p>
-              <p class="starter_dish_text2">Aux zestes d'orange</p>
-              <p class="starter_dish_price">25€</p>
-              <p class="starter_dish_checkicon">
+        <div class="menu-card">
+          <h1 class="card_title">Entrées</h1>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Tartare de poulpe acidulé</p>
+              <p class="card_subtitle">Aux zestes d'orange</p>
+              <p class="card_price">25€</p>
+              <p class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
               </p>
             </a>
           </div>
+          <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
           <div class="starter_dish">
             <a class="starter_link" href="#">
