Uniformisation pour les entrées
Balises uniformisées

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -46,23 +46,23 @@
           </div>
           <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
-          <div class="starter_dish">
-            <a class="starter_link" href="#">
-              <p class="starter_dish_text">Velouté de légumes d'antan</p>
-              <p class="starter_dish_text2">Carotte, panais, topinambour</p>
-              <p class="starter_dish_price">35€</p>
-              <p class="starter_dish_checkicon">
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Velouté de légumes d'antan</p>
+              <p class="card_subtitle">Carotte, panais, topinambour</p>
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
               </p>
             </a>
           </div>
           <!-- attention -->
-          <div class="starter_dish">
-            <a class="starter_link" href="#">
-              <p class="starter_dish_text">Soupe à l'oignon</p>
-              <p class="starter_dish_text2">Revisitée</p>
-              <p class="starter_dish_price">20€</p>
-              <p class="starter_dish_checkicon">
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Soupe à l'oignon</p>
+              <p class="card_subtitle">Revisitée</p>
+              <p class="card_price">20€</p>
+              <p class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
               </p>
             </a>
