Uniformisation des menus restants
Balises et classes uniformisées

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -33,7 +33,7 @@
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
-          <h1 class="card_title">Entrées</h1>
+          <h1 class="card_maintitle">Entrées</h1>
           <div class="card">
             <a class="card_link" href="#">
               <p class="card_title">Tartare de poulpe acidulé</p>
@@ -70,54 +70,54 @@
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
-        <div class="main">
-          <h1 class="maindish_title">Plats</h1>
-          <div class="main_maindish">
-            <a class="maindish_link" href="#">
-              <p class="maindish_text">Coquilles Saint-Jacques</p>
-              <p class="maindish_text2">Accompagnées d'une purée de panais</p>
-              <p class="maindish_price">40€</p>
+        <div class="menu_card">
+          <h1 class="card_maintitle">Plats</h1>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Coquilles Saint-Jacques</p>
+              <p class="card_subtitle">Accompagnées d'une purée de panais</p>
+              <p class="card_price">40€</p>
             </a>
           </div>
-          <div class="main_maindish">
-            <a class="maindish_link" href="#">
-              <p class="maindish_text">Magret de canard</p>
-              <p class="maindish_text2">Et parmentier de pommes de terres</p>
-              <p class="maindish_price">35€</p>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Magret de canard</p>
+              <p class="card_subtitle">Et parmentier de pommes de terres</p>
+              <p class="card_price">35€</p>
             </a>
           </div>
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
-          <div class="main_maindish">
-            <a class="maindish_link" href="#">
-              <p class="maindish_text">Pigeonneau d'Ille-et-Vilaine</p>
-              <p class="maindish_text2">Sur son lit de gnocchis aux légumes</p>
-              <p class="maindish_price">44€</p>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Pigeonneau d'Ille-et-Vilaine</p>
+              <p class="card_subtitle">Sur son lit de gnocchis aux légumes</p>
+              <p class="card_price">44€</p>
             </a>
           </div>
         </div>
         <!-- Fin du menu pour les plats -->
         <!-- Début du menu pour les desserts -->
-        <div class="finish">
-          <h1 class="finish_title">Desserts</h1>
-          <div class="finish_desserts">
-            <a class="desserts_link" href="#">
-              <p class="desserts_text">Pétales de violettes glacés</p>
-              <p class="desserts_text2">Et purée de noisettes</p>
-              <p class="desserts_price">18€</p>
+        <div class="menu-card">
+          <h1 class="card_maintitle">Desserts</h1>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Pétales de violettes glacés</p>
+              <p class="card_subtitle">Et purée de noisettes</p>
+              <p class="card_price">18€</p>
             </a>
           </div>
-          <div class="finish_desserts">
-            <a class="desserts_link" href="#">
-              <p class="desserts_text">Fondant au chocolat</p>
-              <p class="desserts_text2">Revisité</p>
-              <p class="desserts_price">22€</p>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Fondant au chocolat</p>
+              <p class="card_subtitle">Revisité</p>
+              <p class="card_price">22€</p>
             </a>
           </div>
-          <div class="finish_desserts">
-            <a class="desserts_link" href="#">
-              <p class="desserts_text">Millefeuille croustillant</p>
-              <p class="desserts_text2">Myrtilles et pâte d'amande</p>
-              <p class="desserts_price">23€</p>
+          <div class="card">
+            <a class="card_link" href="#">
+              <p class="card_title">Millefeuille croustillant</p>
+              <p class="card_subtitle">Myrtilles et pâte d'amande</p>
+              <p class="card_price">23€</p>
             </a>
           </div>
         </div>
