Correction du mentor
Chemin incorrect pour le fichier CSS

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -9,15 +9,11 @@
   </head>
   <body>
     <header class="page-head">
-      <a class="page-head_returnlink" href="../index.html">
-        <i class="fa-solid fa-left-long"></i>
-        <p class="returnlink_return">Retour</p>
+      <!-- ajouter une balise nav  -->
+      <a class="page-head_returnlink" href="../index.html" aria-label="Flèche retour">
+      <i class="fa-solid fa-left-long"> </i>
       </a>
-      <img
-        src="../assets/images/logo/ohmyfood.png"
-        alt="Logo Ohmyfood"
-        class="page-head_logo"
-      />
+      <img src="../assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="page-head_logo"/>
     </header>
     <main>
       <!-- Simple image ou background? -->
