--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/scss/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Ohmyfood</title>
   </head>
   <body>
     <header class="index-head">
+      <!-- mettre l'image dans la div -->
       <img
         class="index-head__logo"
         src="assets/images/logo/ohmyfood.png"
