Création d'une div pour le logo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <body>
     <header class="index-head">
       <!-- mettre l'image dans la div -->
-      <img
-        class="index-head__logo"
-        src="assets/images/logo/ohmyfood.png"
-        alt="Logo Ohmyfood"
-      />
+      <!-- C'est fait -->
+      <div class="index-head_logo">
+        <img
+          class="logo_picture"
+          src="assets/images/logo/ohmyfood.png"
+          alt="Logo Ohmyfood"
+        />
+      </div>
       <div class="index-head__location">
         <i class="fa-solid fa-location-dot"></i>
         <p class="index-head__locationtext">Paris, Belleville</p>
